<resources>
    <string name="app_name">NSU CPC</string>

    <!--    Splash Screen-->

    <string name="show_your_talent_grab_a_job">Show Your Talent Grab a Job</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="nsu_cpc">NSU CPC</string>


    <!--    Sign Up Screen-->

    <string name="create_your_new_account">Create Your New Account</string>
    <string name="full_name">Full Name</string>
    <string name="nsu_id">Nsu Id</string>
    <string name="nsu_email">Nsu Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="nid">Nid</string>
    <!--    <string name="sign_up">Sign Up</string>-->
    <string name="already_have_an_account_sign_in_now">Already Have an Account? Sign In Now</string>


    <!--    Login Screen-->

    <!--    <string name="nsu_email">Nsu Email</string>-->
    <!--    <string name="password">Password</string>-->
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_any_account">Don\'t Have Any Account? Sign Up</string>


    <!--    Personal Details-->

    <string name="your_personal_details">Your Personal Details</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother Name</string>
    <!--    <string name="date_of_birth">Date of Birth</string>-->
    <!--    <string name="nid">Nid</string>-->
    <string name="religion">Religion</string>
    <string name="gender">Select Gender</string>
    <string name="nationality">Nationality</string>
    <string name="save">Save</string>


    <!--    Academic Details-->

    <string name="your_academic_details">Your Academic Details</string>
    <string name="institution_name">Institution Name</string>
    <string name="degree_tittle">Select Degree Tittle</string>
    <string name="department">Select Department</string>
    <string name="school">Select School</string>
    <string name="cgpa">CGPA</string>
    <string name="passing_year">Passing Year</string>
    <string name="duraion">Duraion</string>


    <!--    Contact Details-->

    <string name="your_contact_details">Your Contact Details</string>
    <string name="parmanent_address">Parmanent Address</string>
    <string name="present_address">Present Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="alternative_phone_number">Alternative Phone Number</string>
    <string name="personal_email">Personal Email</string>


    <!--    Speciality Details-->

    <string name="your_speciality">Your Speciality</string>
    <string name="skill_description">Skill Description</string>
    <string name="extra_curricular_activities">Extra Curricular Activities</string>
    <string name="personal_achievement">Personal Achievement</string>
    <string name="add_skills">Add Skills</string>


    <!--    Experiences Details-->

    <string name="experiences">Experiences</string>
    <string name="company_name">Company Name</string>
    <!--    <string name="department">Department</string>-->
    <string name="designation">Designation</string>
    <string name="years_of_experiences">Years of Experiences</string>


    <!--    DropDown-->
    <string name="drop_down">Drop Down</string>


</resources>