<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity.ContactDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F4F4">


        <TextView
            android:id="@+id/contactDetailsId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:text="@string/your_contact_details"
            android:textColor="@color/button_background"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/contactParmanentAddressId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/input_box"
            android:backgroundTint="#E4E1E1"
            android:ems="10"
            android:hint="@string/parmanent_address"
            android:inputType="textPersonName"
            android:paddingLeft="30dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactDetailsId" />

        <EditText
            android:id="@+id/contactPresentAddressId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_box"
            android:backgroundTint="#E4E1E1"
            android:ems="10"
            android:hint="@string/present_address"
            android:inputType="textPersonName"
            android:paddingLeft="30dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactParmanentAddressId" />

        <EditText
            android:id="@+id/contactPhoneNumberId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_box"
            android:backgroundTint="#E4E1E1"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="numberDecimal"
            android:paddingLeft="30dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactPresentAddressId" />

        <EditText
            android:id="@+id/contactAlternativePhoneNumberId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_box"
            android:backgroundTint="#E4E1E1"
            android:ems="10"
            android:hint="@string/alternative_phone_number"
            android:inputType="numberDecimal"
            android:paddingLeft="30dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactPhoneNumberId" />

        <EditText
            android:id="@+id/contactPersonalEmailId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_box"
            android:backgroundTint="#E4E1E1"
            android:ems="10"
            android:hint="@string/personal_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="30dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactAlternativePhoneNumberId" />


        <Button
            android:id="@+id/contactSaveButtonId"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="52dp"
            android:background="@drawable/button_box"
            android:onClick="save"
            android:text="@string/save"
            android:textColor="@color/light_white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="#6DA396"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.827"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contactPersonalEmailId" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>