<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity.ExperiencesDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4F4F4">


        <TextView
            android:id="@+id/experienceDetailsId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:text="@string/experiences"
            android:textColor="@color/button_background"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/experienceCompanyNameId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/input_box"
            android:backgroundTint="#E4E1E1"
            android:ems="10"
            android:hint="@string/company_name"
            android:inputType="textPersonName"
            android:paddingLeft="30dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/experienceDetailsId" />

        <EditText
            android:id="@+id/experienceDepartmentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_box"
            android:backgroundTint="#E4E1E1"
            android:ems="10"
            android:hint="@string/department"
            android:inputType="textPersonName"
            android:paddingLeft="30dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/experienceCompanyNameId" />

        <EditText
            android:id="@+id/experienceDesignationId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_box"
            android:backgroundTint="#E4E1E1"
            android:ems="10"
            android:hint="@string/designation"
            android:inputType="textPersonName"
            android:paddingLeft="30dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/experienceDepartmentId" />

        <EditText
            android:id="@+id/experienceYearsOfExperienceId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_box"
            android:backgroundTint="#E4E1E1"
            android:ems="10"
            android:hint="@string/years_of_experiences"
            android:inputType="textPersonName"
            android:paddingLeft="30dp"
            android:textColorHint="@color/hint_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/experienceDesignationId" />


        <Button
            android:id="@+id/experienceSaveButtonId"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/button_box"
            android:onClick="save"
            android:text="@string/save"
            android:textColor="@color/light_white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="#6DA396"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.827"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/experienceYearsOfExperienceId" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>