<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splash_background"
    tools:context=".DetailsActivity.SplashScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    <ImageView
        android:id="@+id/jobImageId"
        android:layout_width="296dp"
        android:layout_height="215dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/job_interview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/showYourTalentId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/show_your_talent_grab_a_job"
        android:textColor="@color/splash_screen_text_color"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nsuCpcId" />

    <TextView
        android:id="@+id/nsuCpcId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/nsu_cpc"
        android:textColor="@color/splash_screen_text_color"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobImageId" />

    <Button
        android:id="@+id/signUpId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="68dp"
        android:onClick="signUp"
        android:background="@drawable/button_box"
        android:text="@string/sign_up"
        app:backgroundTint="@color/button_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showYourTalentId" />

    <Button
        android:id="@+id/skipId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/skip_button_box"
        android:hapticFeedbackEnabled="true"
        android:onClick="skip"
        android:text="@string/skip"
        app:backgroundTintMode="src_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signUpId"
        app:layout_constraintTop_toBottomOf="@+id/showYourTalentId" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>